--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,8 @@
 application: bikegears-hrd
-version: 2
-runtime: python
+version: 3
+runtime: python27
 api_version: 1
+threadsafe: true
 
 handlers:
 - url: /css
@@ -11,10 +12,10 @@ handlers:
 - url: /images
   static_dir: images
 - url: /admin.*
-  script: bgadmin.py
+  script: bgadmin.app
   login: admin
 - url: /user.*
-  script: bikegears.py
+  script: bikegears.app
   login: required
 - url: /
-  script: welcome.py
+  script: welcome.app
