First changes to start changes to use of datastore. Added profile and made user the parent of the bike entity.

--- a/index.yaml
+++ b/index.yaml
@@ -21,3 +21,9 @@ indexes:
   - name: bikeRider
   - name: date
     direction: desc
+
+- kind: BikeRide
+  ancestor: yes
+  properties:
+  - name: date
+    direction: desc
